--- a/src/app/angular2-poc.component.html
+++ b/src/app/angular2-poc.component.html
@@ -1,3 +1,9 @@
+<a [routerLink] = "['/home']">Home</a>
+<a [routerLink] = "['/team']">Team</a>
+<a [routerLink] = "['/detail', 7]">Detail</a>
+
 <h1>
   {{title}}
 </h1>
+
+<router-outlet></router-outlet>
